# MobileGamePenetrationTestingFramework

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  build.sh  clean.sh  log.sh  logFile.sh  logTagConsole.sh  logTagConsoleUnity.sh  logTagFile.sh  myAnalysis.cpp  myDobbyHttps.cpp  myLua.cpp  myMono2.cpp  myTestCase.cpp  myTimehook.cpp  myUnityIL2Cpp.cpp  myXhook.cpp
LuaHeaders/lua515/: lua.h
LuaHeaders/lua533/: lua.h
LuaHeaders/lua535/: lua.h
LuaScript/: FileWrite.lua  HookAll.lua  Log.lua  debughook.lua  hack.lua  hookclass.lua  setGTable.lua  threadCall.lua
MonoHeaders/: mono2.h  mono2_1.h
framework/And64InlineHook/: And64InlineHook.cpp
framework/NativeSandBox/: NativeSandBox.cpp
framework/NativeSandBox/include/: NativeSandBox.h
framework/Substrate/: Buffer.hpp  CydiaSubstrate.h  Helper.h  SubstrateDebug.cpp  SubstrateHook.cpp  SubstrateHook.h  SubstrateLog.hpp  SubstratePosixMemory.cpp
framework/Utils/: HwBreakpointManager.cpp  PrintStack.cpp  Util.cpp
framework/Utils/include/: GlobalInfo.h  HwBreakpointManager.h  Log.h  PrintStack.h  Util.h
framework/Zygisk-Il2CppDumper/: il2cpp_dump.h
framework/base64/: base64.cpp  base64.h
framework/byOpen/: byopen.h  byopen_android.c  prefix.h
